OAK-9280 : Missing assertions/verification with tests
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1883784 13f79535-47bb-0310-9956-ffa450edef68